--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ ZOHO_CLIENT_ID=
 ZOHO_CLIENT_SECRET=
 ZOHO_REDIRECT_URI=http://localhost:8002/auth/zoho/callback
 BACKEND_BASE=http://localhost:8002
-MONGO_URI=mongodb+srv://agent_user:prodevanssupport123@prodevanssupport.lvsiqgs.mongodb.net/
+MONGO_URI=
 DB_NAME=ProdevansSupport
 OAUTH_BASE=https://accounts.zoho.in
 PEOPLE_BASE=https://people.zoho.in/people/api
